--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "node-sass-chokidar": "0.0.3",
@@ -10,14 +11,15 @@
     "react": "^16.2.0",
     "react-device-detect": "^0.1.0",
     "react-dom": "^16.2.0",
-    "react-fullpage": "^0.1.18",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "react-swipeable": "^4.2.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
     "redux-logger": "^3.0.6",
+    "typed.js": "^2.0.6",
     "vivus": "^0.4.3"
   },
   "scripts": {
