--- a/package.json
+++ b/package.json
@@ -10,7 +10,18 @@
   },
   "author": "Zach Winter",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "d3-color": "^1.2.8",
+    "d3-interpolate": "^1.3.2",
+    "d3-scale": "^3.0.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "express-history-api-fallback": "^2.2.1",
+    "node-fetch": "^2.5.0",
+    "three": "^0.107.0",
+    "webpack-cli": "^3.3.2",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
@@ -23,21 +34,7 @@
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "^0.23.1",
-    "webpack": "^4.30.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
-    "d3-color": "^1.2.8",
-    "d3-interpolate": "^1.3.2",
-    "d3-scale": "^3.0.1",
-    "dotenv": "^8.0.0",
-    "express": "^4.16.4",
-    "express-history-api-fallback": "^2.2.1",
-    "node-fetch": "^2.5.0",
-    "three": "^0.107.0",
-    "webpack-cli": "^3.3.2"
   }
 }
