--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "^0.23.1",
     "three": "^0.107.0",
+    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
