--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "node ./server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -13,9 +14,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/pro-light-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "compression": "^1.7.4",
     "core-js": "^3.6.5",
     "d3-interpolate": "^1.4.0",
     "date-fns": "^2.15.0",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "lodash": "^4.17.19",
     "swiper": "^6.1.1",
     "three": "^0.119.1",
