--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "three": "^0.119.1",
     "vivus": "^0.4.5",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
