Resume bug fix.

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=${FONT_AWESOME_AUTH_TOKEN}
+//npm.fontawesome.com/:_authToken=0DE17FFE-EF56-4FEC-AEC7-7A31A8703B2C
