--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "./server/index.js",
+    "start": "node ./server/index.js",
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
