--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@shaderpad/core": "file:../@shaderpad",
     "@thednp/bezier-easing": "^1.0.3",
     "@vueuse/core": "^10.1.2",
-    "audio-reactive": "file:../audio-reactive",
+    "d3-array": "^3.2.4",
     "d3-ease": "^3.0.1",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "^4.0.2",
@@ -23,7 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-history-api-fallback": "^2.2.1",
-    "fragment-shader": "file:../fragment-shader",
+    "fragment-shader": "^0.2.1",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -31,6 +30,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.0",
+    "@types/d3-array": "^3.0.5",
     "@types/d3-ease": "^3.0.0",
     "@types/d3-interpolate": "^3.0.1",
     "@types/d3-scale": "^4.0.3",
