--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-history-api-fallback": "^2.2.1",
-    "fragment-shader": "^0.2.2",
+    "fragment-shader": "file:../fragment-shader",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -48,6 +48,7 @@
     "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
+    "unplugin-vue-router": "^0.6.4",
     "vite": "^4.3.4",
     "vite-plugin-glsl": "^1.1.2",
     "vite-plugin-pages": "^0.29.0",
