--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-history-api-fallback": "^2.2.1",
     "fragment-shader": "^0.2.3",
+    "heroku-ssl-redirect": "^0.1.1",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
